--- a/LF_mobile/LF_mobile.Droid/packages.config
+++ b/LF_mobile/LF_mobile.Droid/packages.config
@@ -1,19 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Acr.Support" version="2.1.0" targetFramework="monoandroid44" />
+  <package id="Acr.Support" version="2.1.0" targetFramework="monoandroid80" />
   <package id="Acr.UserDialogs" version="6.5.1" targetFramework="monoandroid80" />
   <package id="AndHUD" version="1.2.0" targetFramework="monoandroid44" />
-  <package id="CarouselView.FormsPlugin" version="4.4.5" targetFramework="monoandroid80" />
+  <package id="CarouselView.FormsPlugin" version="4.4.6" targetFramework="monoandroid80" />
   <package id="DLToolkit.Forms.Controls.FlowListView" version="2.0.7" targetFramework="monoandroid80" />
   <package id="Microsoft.AspNet.SignalR.Client" version="2.2.2" targetFramework="monoandroid80" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="monoandroid80" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="monoandroid44" />
-  <package id="Microsoft.CSharp" version="4.3.0" targetFramework="monoandroid80" />
+  <package id="Microsoft.CSharp" version="4.4.0" targetFramework="monoandroid80" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="monoandroid80" />
-  <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="monoandroid80" />
+  <package id="Microsoft.NETCore.Platforms" version="2.0.0" targetFramework="monoandroid80" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="monoandroid80" />
   <package id="modernhttpclient" version="2.4.2" targetFramework="monoandroid60" />
-  <package id="NETStandard.Library" version="1.6.1" targetFramework="monoandroid80" />
+  <package id="NETStandard.Library" version="2.0.1" targetFramework="monoandroid80" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="monoandroid80" />
   <package id="Plugin.CurrentActivity" version="1.0.1" targetFramework="monoandroid80" />
   <package id="Rg.Plugins.Popup" version="1.0.4" targetFramework="monoandroid60" />
@@ -41,7 +41,7 @@
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="monoandroid80" />
   <package id="System.Linq" version="4.3.0" targetFramework="monoandroid80" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="monoandroid80" />
-  <package id="System.Net.Http" version="4.3.0" targetFramework="monoandroid80" />
+  <package id="System.Net.Http" version="4.3.3" targetFramework="monoandroid80" />
   <package id="System.Net.Primitives" version="4.3.0" targetFramework="monoandroid80" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="monoandroid80" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="monoandroid80" />
@@ -60,7 +60,7 @@
   <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="monoandroid80" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="monoandroid80" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="monoandroid80" />
-  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="monoandroid80" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.1" targetFramework="monoandroid80" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="monoandroid80" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="monoandroid80" />
   <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="monoandroid80" />
@@ -73,24 +73,24 @@
   <package id="Xam.Plugin.Connectivity" version="3.0.3" targetFramework="monoandroid80" />
   <package id="Xam.Plugin.DeviceInfo" version="3.0.2" targetFramework="monoandroid80" />
   <package id="Xam.Plugins.Settings" version="3.1.1" targetFramework="monoandroid80" />
-  <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="26.0.2" targetFramework="monoandroid80" requireReinstallation="true" />
-  <package id="Xamarin.Android.Support.Annotations" version="26.0.2" targetFramework="monoandroid80" requireReinstallation="true" />
-  <package id="Xamarin.Android.Support.Compat" version="26.0.2" targetFramework="monoandroid80" requireReinstallation="true" />
-  <package id="Xamarin.Android.Support.Core.UI" version="26.0.2" targetFramework="monoandroid80" requireReinstallation="true" />
-  <package id="Xamarin.Android.Support.Core.Utils" version="26.0.2" targetFramework="monoandroid80" requireReinstallation="true" />
-  <package id="Xamarin.Android.Support.Design" version="26.0.2" targetFramework="monoandroid80" requireReinstallation="true" />
-  <package id="Xamarin.Android.Support.Fragment" version="26.0.2" targetFramework="monoandroid80" requireReinstallation="true" />
-  <package id="Xamarin.Android.Support.Media.Compat" version="26.0.2" targetFramework="monoandroid80" requireReinstallation="true" />
-  <package id="Xamarin.Android.Support.Transition" version="26.0.2" targetFramework="monoandroid80" requireReinstallation="true" />
-  <package id="Xamarin.Android.Support.v4" version="26.0.2" targetFramework="monoandroid80" requireReinstallation="true" />
-  <package id="Xamarin.Android.Support.v7.AppCompat" version="26.0.2" targetFramework="monoandroid80" requireReinstallation="true" />
-  <package id="Xamarin.Android.Support.v7.CardView" version="26.0.2" targetFramework="monoandroid80" requireReinstallation="true" />
-  <package id="Xamarin.Android.Support.v7.MediaRouter" version="26.0.2" targetFramework="monoandroid80" requireReinstallation="true" />
-  <package id="Xamarin.Android.Support.v7.Palette" version="26.0.2" targetFramework="monoandroid80" requireReinstallation="true" />
-  <package id="Xamarin.Android.Support.v7.RecyclerView" version="26.0.2" targetFramework="monoandroid80" requireReinstallation="true" />
-  <package id="Xamarin.Android.Support.v8.RenderScript" version="26.0.2" targetFramework="monoandroid80" requireReinstallation="true" />
-  <package id="Xamarin.Android.Support.Vector.Drawable" version="26.0.2" targetFramework="monoandroid80" requireReinstallation="true" />
-  <package id="Xamarin.Build.Download" version="0.4.2" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="26.0.2" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.Annotations" version="26.0.2" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.Compat" version="26.0.2" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.Core.UI" version="26.0.2" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.Core.Utils" version="26.0.2" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.Design" version="26.0.2" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.Fragment" version="26.0.2" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.Media.Compat" version="26.0.2" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.Transition" version="26.0.2" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.v4" version="26.0.2" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.v7.AppCompat" version="26.0.2" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.v7.CardView" version="26.0.2" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.v7.MediaRouter" version="26.0.2" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.v7.Palette" version="26.0.2" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.v7.RecyclerView" version="26.0.2" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.v8.RenderScript" version="26.0.2" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.Vector.Drawable" version="26.0.2" targetFramework="monoandroid80" />
+  <package id="Xamarin.Build.Download" version="0.4.7" targetFramework="monoandroid80" />
   <package id="Xamarin.FFImageLoading" version="2.2.20" targetFramework="monoandroid80" />
   <package id="Xamarin.FFImageLoading.Forms" version="2.2.20" targetFramework="monoandroid80" />
   <package id="Xamarin.Forms" version="2.4.0.18342" targetFramework="monoandroid80" />
@@ -98,8 +98,8 @@
   <package id="Xamarin.Forms.Dynamic" version="0.1.18-pre" targetFramework="monoandroid44" />
   <package id="Xamarin.Forms.Maps" version="2.4.0.18342" targetFramework="monoandroid80" />
   <package id="Xamarin.Forms.Player2" version="0.1.12-pre" targetFramework="monoandroid44" />
-  <package id="Xamarin.GooglePlayServices.Base" version="42.1021.1" targetFramework="monoandroid80" requireReinstallation="true" />
-  <package id="Xamarin.GooglePlayServices.Basement" version="42.1021.1" targetFramework="monoandroid80" requireReinstallation="true" />
-  <package id="Xamarin.GooglePlayServices.Maps" version="42.1021.1" targetFramework="monoandroid80" requireReinstallation="true" />
-  <package id="Xamarin.GooglePlayServices.Tasks" version="42.1021.1" targetFramework="monoandroid80" requireReinstallation="true" />
+  <package id="Xamarin.GooglePlayServices.Base" version="42.1021.1" targetFramework="monoandroid80" />
+  <package id="Xamarin.GooglePlayServices.Basement" version="42.1021.1" targetFramework="monoandroid80" />
+  <package id="Xamarin.GooglePlayServices.Maps" version="42.1021.1" targetFramework="monoandroid80" />
+  <package id="Xamarin.GooglePlayServices.Tasks" version="42.1021.1" targetFramework="monoandroid80" />
 </packages>
