--- a/LF_mobile/LF_mobile.iOS/Info.plist
+++ b/LF_mobile/LF_mobile.iOS/Info.plist
@@ -24,7 +24,7 @@
 		<string>Icon-83.5@2x</string>
 	</array>
 	<key>CFBundleIdentifier</key>
-	<string>com.xamarin.recipe.downloadfile</string>
+	<string>ru.lifeshopping.lfmobile</string>
 	<key>CFBundleName</key>
 	<string>lifeshopping</string>
 	<key>CFBundleShortVersionString</key>
@@ -38,12 +38,24 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>NSAppleMusicUsageDescription</key>
+	<string>New Entry</string>
 	<key>NSCalendarsUsageDescription</key>
 	<string>Отображение режима работ магазина</string>
+	<key>NSCameraUsageDescription</key>
+	<string>This app needs access to the camera to take photos.</string>
+	<key>NSHomeKitUsageDescription</key>
+	<string>New Entry</string>
 	<key>NSLocationAlwaysUsageDescription</key>
 	<string>Can we use your location</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>We are using your location</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>This app needs access to microphone.</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>This app needs access to the photo gallery.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>This app needs access to photos.</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Fonts/Ubuntu.ttf</string>
@@ -59,6 +71,8 @@
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
+	<key>UIRequiresPersistentWiFi</key>
+	<true/>
 	<key>UIStatusBarHidden</key>
 	<true/>
 	<key>UISupportedInterfaceOrientations</key>
