--- a/LF_mobile/LF_mobile.iOS/packages.config
+++ b/LF_mobile/LF_mobile.iOS/packages.config
@@ -2,13 +2,14 @@
 <packages>
   <package id="Acr.Support" version="2.1.0" targetFramework="xamarinios10" />
   <package id="Acr.UserDialogs" version="6.5.1" targetFramework="xamarinios10" />
-  <package id="BTProgressHUD" version="1.2.0.5" targetFramework="xamarinios10" />
-  <package id="CarouselView.FormsPlugin" version="4.4.5" targetFramework="xamarinios10" />
+  <package id="BTProgressHUD" version="1.2.0.6" targetFramework="xamarinios10" />
+  <package id="CarouselView.FormsPlugin" version="4.4.6" targetFramework="xamarinios10" />
   <package id="DLToolkit.Forms.Controls.FlowListView" version="2.0.7" targetFramework="xamarinios10" />
   <package id="Microsoft.NETCore.Platforms" version="2.0.0" targetFramework="xamarinios10" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="xamarinios10" />
   <package id="modernhttpclient" version="2.4.2" targetFramework="xamarinios10" />
   <package id="NETStandard.Library" version="2.0.1" targetFramework="xamarinios10" />
+  <package id="Plugin.Share" version="7.0.1" targetFramework="xamarinios10" />
   <package id="Rg.Plugins.Popup" version="1.0.4" targetFramework="xamarinios10" />
   <package id="ScnViewGestures.Forms" version="1.3.6.1" targetFramework="xamarinios10" />
   <package id="Splat" version="2.0.0" targetFramework="xamarinios10" />
@@ -61,6 +62,7 @@
   <package id="WebP.Touch" version="1.0.4" targetFramework="xamarinios10" />
   <package id="Xam.Plugin.Connectivity" version="3.0.3" targetFramework="xamarinios10" />
   <package id="Xam.Plugin.DeviceInfo" version="3.0.2" targetFramework="xamarinios10" />
+  <package id="Xam.Plugin.Media" version="3.0.1" targetFramework="xamarinios10" />
   <package id="Xamarin.FFImageLoading" version="2.2.20" targetFramework="xamarinios10" />
   <package id="Xamarin.FFImageLoading.Forms" version="2.2.20" targetFramework="xamarinios10" />
   <package id="Xamarin.Forms" version="2.4.0.18342" targetFramework="xamarinios10" />
