--- a/LF_mobile/LF_mobile/packages.config
+++ b/LF_mobile/LF_mobile/packages.config
@@ -1,13 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Acr.UserDialogs" version="6.5.1" targetFramework="portable45-net45+win8+wpa81" />
-  <package id="CarouselView.FormsPlugin" version="4.4.5" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="CarouselView.FormsPlugin" version="4.4.6" targetFramework="portable45-net45+win8+wpa81" />
   <package id="DLToolkit.Forms.Controls.FlowListView" version="2.0.7" targetFramework="portable45-net45+win8+wpa81" />
   <package id="ExifLib.PCL" version="1.0.1" targetFramework="portable45-net45+win8+wpa81" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="portable45-net45+win8+wpa81" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="portable45-net45+win8+wpa81" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="portable45-net45+win8+wpa81" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="Plugin.Share" version="7.0.1" targetFramework="portable45-net45+win8+wpa81" />
   <package id="Rg.Plugins.Popup" version="1.0.4" targetFramework="portable45-net45+win8+wpa81" />
   <package id="ScnViewGestures.Forms" version="1.3.6.1" targetFramework="portable45-net45+win8+wpa81" />
   <package id="Splat" version="2.0.0" targetFramework="portable45-net45+win8+wpa81" />
@@ -16,6 +17,7 @@
   <package id="SQLitePCLRaw.core" version="1.1.8" targetFramework="portable45-net45+win8+wpa81" />
   <package id="Xam.Plugin.Connectivity" version="3.0.3" targetFramework="portable45-net45+win8+wpa81" />
   <package id="Xam.Plugin.DeviceInfo" version="3.0.2" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="Xam.Plugin.Media" version="3.0.1" targetFramework="portable45-net45+win8+wpa81" />
   <package id="Xam.Plugins.Settings" version="3.1.1" targetFramework="portable45-net45+win8+wpa81" />
   <package id="Xamarin.FFImageLoading" version="2.2.20" targetFramework="portable45-net45+win8+wpa81" />
   <package id="Xamarin.FFImageLoading.Forms" version="2.2.20" targetFramework="portable45-net45+win8+wpa81" />
